# Advent-of-Code-2020

./: pyproject.toml
.github/workflows/: ci.yaml
adventofcode/: __main__.py  day01.py  day02.py  day03.py  day05.py  day06.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day2.py  day4.py  day6.py  day7.py  day8.py  day9.py
adventofcode/tests/: test_day01.py  test_day02.py  test_day03.py  test_day04.py  test_day05.py  test_day06.py  test_day07.py  test_day08.py  test_day09.py  test_day1.py  test_day10.py  test_day11.py  test_day12.py  test_day13.py  test_day14.py  test_day15.py  test_day16.py  test_day2.py  test_day3.py  test_day4.py  test_day5.py  test_day6.py  test_day7.py  test_day8.py  test_day9.py
input/: day16_tickets.txt
