[tool.poetry]
name = "advent-of-code-2020"
version = "0.1.0"
description = ""
authors = ["Jim Madge <jmmadge@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
